Fixed landing page spacing

--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -15,7 +15,7 @@
 }
 
 .intro {
-  margin-top: 30vh;
+  margin-top: 160px;
 }
 
 .name-heading {
